--- a/style.css
+++ b/style.css
@@ -29,7 +29,15 @@
   }
   .jumbotron {
     margin-top: -220px;
-    height: 800px !important;
+    height: 900px !important;
+  }
+  .jumbotron::after {
+    content: "";
+    display: none !important;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
   }
 
   .home h1 {
@@ -146,42 +154,43 @@ span {
 }
 /* section margin */
 .section-margin {
-  margin-top: 250px;
+  margin-top: 100px;
 }
 /* about */
 .about {
   text-align: center;
 }
+.about h1 {
+  margin-bottom: 50px;
+}
 .about .deskripsi {
-  font-size: 18px;
-  width: 65%;
+  font-size: 20px;
+  width: 60%;
   margin: auto;
 }
 /* service */
 .service {
   text-align: center;
-  background-image: linear-gradient(
-    to top,
-    #020e35 0%,
-    #020e35 21%,
-    #fff 0%,
-    #ffff 100%
-  );
+  background-image: linear-gradient(to top, #020e35 0%, #020e35 24%, #fff 0%, #ffff 100%);
 }
-.service img{
+.service h1 {
+  margin-bottom: 50px;
+}
+.service img {
   padding-bottom: 5rem;
 }
 .service h5 {
   color: white;
-  font-size: 20px;
+  font-size: 26px;
   padding-bottom: 15px;
 }
-.service span{
+.service span {
   color: white;
   font-size: 18px;
   font-weight: 500;
 }
-.carousel-control-prev-icon, .carousel-control-next-icon {
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
   height: 40px;
   width: 40px;
   outline: rgb(252, 248, 248);
@@ -191,7 +200,9 @@ span {
 }
 /* work */
 .work {
-  background-image: url(pict/work.jpg);
+  background-image: linear-gradient(to top, #020e35 0%, #020e35 100%, #fff 0%, #ffff 100%);
+  padding-bottom: 50px;
+  color: #fff;
   background-repeat: repeat;
   background-size: 100vmax;
   text-align: center;
@@ -203,6 +214,12 @@ span {
   font-weight: 700;
   font-size: 30px;
 }
+.work h4 {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 70px;
+  font-size: 19px;
+}
 .text-work {
   letter-spacing: 3px;
 }
@@ -213,6 +230,20 @@ span {
 .work img {
   border: 7px;
   border-style: groove;
+}
+.work .work-button {
+  margin-top: 50px;
+  text-align: center;
+}
+.work .btn {
+  background-image: linear-gradient(to top, #f9795a 0%, #ff3300 100%, #fff 0%, #ffff 100%);
+  color: #fff;
+  transition: 0.4s;
+}
+.work .btn:hover {
+  box-shadow: 0 15px 19px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  color: black;
+  background-image: linear-gradient(to top, 0% #ff3300, #f9795a 100%, #fff 0%, #ffff 100%);
 }
 /*contact*/
 .contact {
@@ -231,12 +262,12 @@ span {
   letter-spacing: 1.5px;
 }
 .contact .text-contact span {
-  color:#ccb800;
+  color: var(--secondaryColor);
   font-size: 52px;
 }
 .contact .form-contact .btn-contact {
-  color:  white;
-  background:  #020e35;
+  color: white;
+  background: #020e35;
   width: 100%;
   text-align: center;
   padding: 10px 0;
