--- a/style.css
+++ b/style.css
@@ -66,6 +66,15 @@
     text-align: left !important;
     color: var(--secondaryColor);
   }
+  .about .deskripsi {
+    font-size: 20px !important;
+    margin: auto;
+  }
+  .about span {
+    color: var(--primaryColor);
+    font-weight: 700;
+    font-size: 20px !important;
+  }
   .work {
     text-align: left !important;
   }
@@ -164,12 +173,16 @@ span {
 .about {
   text-align: center;
 }
+.about span {
+  color: var(--primaryColor);
+  font-weight: 700;
+  font-size: 13px;
+}
 .about h1 {
   margin-bottom: 50px;
 }
 .about .deskripsi {
-  font-size: 20px;
-  /* width: 60%; */
+  font-size: 13px;
   margin: auto;
 }
 .about img {
