--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@
     font-weight: 400;
     font-size: 1.1rem;
     margin-top: 2em;
+    margin-left: 20px;
     text-align: left !important;
     color: var(--secondaryColor);
   }
