--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@
     position: absolute;
     bottom: 0;
   }
+  .btn-see {
+    /* background-color: var(--primaryColor); */
+    color: white;
+    border-radius: 2em !important;
+    border: 0;
+    padding-left: 1em !important;
+    padding-right: 1 em !important;
+    margin-left: 20px !important;
+    text-align: left !important;
+  }
 
   .home h1 {
     font-weight: 700;
@@ -153,10 +163,29 @@ span {
   padding-right: 1.5em;
   margin-left: 3em;
 }
+.btn-see {
+  color: white;
+  border-radius: 2em;
+  border: 0;
+  padding-left: 1em;
+  padding-right: 1 em;
+  text-align: center;
+}
+.home .btn {
+  background-color: var(--primaryColor);
+  position: relative;
+  z-index: 1;
+  border-radius: 2em;
+  padding-left: 1.2em;
+  padding-right: 1.2em;
+}
+.home .btn:hover {
+  background-color: #0d6efd;
+}
 
 /* home */
 .jumbotron {
-  background-image: url(pict/back2.png);
+  /* background-image: url(pict/back2.png); */
   background-position: top right;
   background-repeat: no-repeat;
   background-size: 70vmax;
