--- a/style.css
+++ b/style.css
@@ -44,19 +44,23 @@
     bottom: 0;
   }
   .btn-see {
-    /* background-color: var(--primaryColor); */
     color: white;
     border-radius: 2em !important;
     border: 0;
     padding-left: 1em !important;
     padding-right: 1 em !important;
-    margin-left: 20px !important;
+    margin-top: 10px !important;
     text-align: left !important;
+  }
+  .home img {
+    margin-top: 5em;
+    height: 690px !important;
+    width: 840px !important;
   }
 
   .home h1 {
     font-weight: 700;
-    margin-top: 6em !important;
+    margin-top: 5.5em !important;
     font-size: 60px !important;
     color: var(--primaryColor);
     white-space: nowrap;
@@ -178,6 +182,7 @@ span {
   border-radius: 2em;
   padding-left: 1.2em;
   padding-right: 1.2em;
+  margin-top: 20px;
 }
 .home .btn:hover {
   background-color: #0d6efd;
@@ -189,23 +194,21 @@ span {
   background-position: top right;
   background-repeat: no-repeat;
   background-size: 70vmax;
-  height: 380px;
+  height: 500px;
   position: relative;
 }
 .jumbotron .container {
   z-index: 1;
   /* position: relative; */
 }
-.jumbotron::after {
-  content: "";
+.home img {
+  margin-top: 1em;
   display: block;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
-  position: absolute;
-  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  height: 240px;
+  width: 360px;
 }
-
 .home h1 {
   margin-top: 1em;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
