--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
   .home img {
     margin-top: 9em !important;
     height: 690px !important;
-    width: 840px !important;
+    width: 890px !important;
   }
 
   .home h1 {
@@ -165,6 +165,7 @@ span {
   padding-left: 1.5em;
   padding-right: 1.5em;
   margin-left: 3em;
+  margin-top: 4px;
 }
 .contact-button:hover {
   background-color: #ffb9b6;
@@ -236,6 +237,16 @@ span {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
   text-align: center;
   color: var(--secondaryColor);
+}
+.jam {
+  color: white;
+  margin-top: 5px;
+  margin-left: 50px;
+  border-style: solid;
+  border-width: medium;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 8px;
 }
 /* section margin */
 .section-margin {
