--- a/style.css
+++ b/style.css
@@ -28,6 +28,27 @@
     padding-bottom: 5px;
     margin-bottom: -8px;
   }
+  .jam {
+    color: white;
+    margin-top: 5px !important;
+    margin-left: 50px;
+    border-style: solid;
+    border-width: medium;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 8px;
+    width: 80px;
+  }
+  .contact-button {
+    background-color: var(--button);
+    color: white;
+    border-radius: 2em;
+    border: 0;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    margin-left: 3em !important;
+    margin-top: 4px !important;
+  }
   .jumbotron {
     margin-top: -220px;
     height: 750px !important;
@@ -164,8 +185,10 @@ span {
   border: 0;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  margin-left: 3em;
-  margin-top: 4px;
+  margin: auto;
+  margin-top: 6px;
+  display: flex;
+  width: 130px;
 }
 .contact-button:hover {
   background-color: #ffb9b6;
@@ -240,13 +263,14 @@ span {
 }
 .jam {
   color: white;
-  margin-top: 5px;
+  margin-top: 23px;
   margin-left: 50px;
   border-style: solid;
   border-width: medium;
   padding-left: 5px;
   padding-right: 5px;
   border-radius: 8px;
+  width: 80px;
 }
 /* section margin */
 .section-margin {
