--- a/style.css
+++ b/style.css
@@ -122,8 +122,16 @@
   .work h1 {
     text-align: center;
     font-size: 26px !important;
+    font-weight: 700;
+    padding-top: 60px;
   }
-  .work h3 {
+  .work h4 {
+    font-size: 20px !important;
+    font-weight: 700;
+  }
+  .work a {
+    text-decoration: none;
+    color: white;
     font-weight: 700;
     font-size: 26px !important;
   }
@@ -345,9 +353,14 @@ section {
   text-align: center;
   font-size: 18px;
 }
-.work h3 {
+.work a {
+  text-decoration: none;
+  color: white;
   font-weight: 700;
   font-size: 18px;
+}
+.work a:hover {
+  color: var(--button);
 }
 .work h4 {
   text-align: center;
@@ -365,17 +378,16 @@ section {
   margin-top: 55px;
   font-size: 20px;
 }
-.work img {
-  border: 7px;
-  border-style: groove;
-}
+
 .work .work-button {
   margin-top: 50px;
   text-align: center;
+  font-size: 10px;
 }
 .work .btn {
   background-image: linear-gradient(to top, #f9795a 0%, #ff3300 100%, #fff 0%, #ffff 100%);
   color: #fff;
+  width: 180px;
   transition: 0.4s;
 }
 .work .btn:hover {
