--- a/style.css
+++ b/style.css
@@ -310,35 +310,64 @@ section {
   width: 55vmax;
 }
 /* service */
+/* service */
 .service {
   text-align: center;
-  background-image: linear-gradient(to top, #020e35 0%, #020e35 24%, #fff 0%, #ffff 100%);
+  background-image: linear-gradient(to top, #020e35 0%, #020e35 50%, #fff 0%, #ffff 100%);
 }
-.service h1 {
-  margin-bottom: 50px;
-  font-size: 18px;
+.wrapper{
+  width: 100%;
+  min-height: 70vh;
+  display: flex;
+  align-items: center;
 }
-.service img {
-  padding-bottom: 5rem;
+.carousel{
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 30px;
 }
-.service h5 {
-  color: white;
-  font-size: 18px;
-  padding-bottom: 15px;
+.carousel .card{
+  color: #fff;
+  text-align: center;
+  margin: 20px 0;
+  line-height: 250px;
+  font-size: 90px;
+  font-weight: 600;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
 }
-.service span {
-  color: white;
-  font-size: 18px;
-  font-weight: 500;
+.carousel .card-1{
+  background: #f9795a;
 }
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  height: 40px;
-  width: 40px;
-  outline: rgb(252, 248, 248);
-  background-color: #020e35;
-  border-radius: 50%;
-  border: 10px solid #020e35;
+.carousel .card-2{
+  background: #f9795a;
+}
+.carousel .card-3{
+  background: #f9795a;
+}
+.carousel .card-4{
+  background: #f9795a;
+}
+.carousel .card-5{
+  background:#f9795a;
+}
+.owl-dots{
+  text-align: center;
+  margin-top: 40px;
+}
+.owl-dot{
+  height: 15px;
+  width: 45px;
+  margin: 0 5px;
+  outline: none;
+  border-radius: 14px;
+  border: 2px solid #0072bc!important;
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+}
+.owl-dot.active,
+.owl-dot:hover{
+  background: #0072bc!important;
 }
 /* work */
 .work {
@@ -415,7 +444,7 @@ section {
   letter-spacing: 1.5px;
 }
 .contact .text-contact span {
-  color: #ccb800;
+  color: #f9795a;
   font-size: 33px;
 }
 .contact .form-contact .btn-contact {
